--- a/2024/billdins/assets/css/module-css/10-faq.css
+++ b/2024/billdins/assets/css/module-css/10-faq.css
@@ -153,7 +153,7 @@ Faq One
 }
 
 .faq-one-accrodion .accrodion-content p {
-    font-size: 17px;
+    font-size: 18px;
     margin: 0;
 }
 
