--- a/container.css
+++ b/container.css
@@ -68,7 +68,6 @@
                                                     margin-right: 8px;
                                                     flex-shrink: 0;
                                                     color: inherit;
-                                                    font-size: 1.2em;
                                                     margin-top: 3px;
                                                 }
                                     
